# NN_E

./: Network.py  Preprocessor.py  README.md  __init__.py  pyproject.toml
Helper/Headers/: KNN.h
nn_e.egg-info/: PKG-INFO  SOURCES.txt
src/NN_E/: Layers.py  Network_types.py
src/NN_E.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/NN_E/Helper/: main.cpp
src/NN_E/Helper/Headers/: SNN.h  globals.h
