[project]
name = "NN_E"
version = "0.1.4"
description = "A modular neural network framework"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "datetime",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/diri-daniel/NN_E.git"

[tool.setuptools.package-data]
Experiment = ["Helper/*.dll", "Helper/*.so"]